syntax = "proto3";

option go_package = "github.com/MQuang200/my-grpc-proto/protogen/hello";

message HelloRequest {
    string name = 1;
}

message HelloResponse {
    string greet = 1;
}

service HelloService {
    rpc SayHello(HelloRequest) returns (HelloResponse) {}
}